ci: fix syntax for conditional expressions in workflow
Ensure consistent syntax for conditional expressions in GitHub Actions workflow by using ${{ }} for all secret checks

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -65,8 +65,7 @@ jobs:
           echo "✅ Dependências Python disponíveis"
 
       - name: 🔐 Azure Login (OIDC)
-        if: >-
-          ${{ secrets.AZURE_CLIENT_ID != '' && secrets.AZURE_TENANT_ID != '' && secrets.AZURE_SUBSCRIPTION_ID != '' }}
+        if: "${{ secrets.AZURE_CLIENT_ID != '' && secrets.AZURE_TENANT_ID != '' && secrets.AZURE_SUBSCRIPTION_ID != '' }}"
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -74,7 +73,7 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: 📋 Confirmar consumo mínimo do Key Vault
-        if: secrets.AZURE_KEYVAULT_NAME != ''
+        if: ${{ secrets.AZURE_KEYVAULT_NAME != '' }}
         run: |
           echo 'Job de validação não consome segredos do Key Vault (lista vazia).'
 
@@ -127,7 +126,7 @@ jobs:
 
       - name: Get Key Vault secrets (RabbitMQ)
         id: kv
-        if: secrets.AZURE_KEYVAULT_NAME != ''
+        if: ${{ secrets.AZURE_KEYVAULT_NAME != '' }}
         uses: azure/get-keyvault-secrets@v1
         with:
           keyvault: ${{ secrets.AZURE_KEYVAULT_NAME }}
@@ -136,7 +135,7 @@ jobs:
             conexao-de-sorte-rabbitmq-password
 
       - name: Preparar secrets do RabbitMQ
-        if: secrets.AZURE_KEYVAULT_NAME != ''
+        if: ${{ secrets.AZURE_KEYVAULT_NAME != '' }}
         run: |
           set -Eeuo pipefail
           username="${{ steps.kv.outputs.conexao-de-sorte-rabbitmq-username }}"
@@ -160,7 +159,7 @@ jobs:
           printf 'RABBITMQ_PASSWORD_FILE=%s\n' "$password_file" >> "$GITHUB_ENV"
 
       - name: Criar Docker secrets
-        if: secrets.AZURE_KEYVAULT_NAME != ''
+        if: ${{ secrets.AZURE_KEYVAULT_NAME != '' }}
         run: |
           set -Eeuo pipefail
           declare -A secrets=(
